--- a/style.css
+++ b/style.css
@@ -90,9 +90,15 @@ h2{
 	height: 58px;
 	border-radius: 50px;
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 680px) {
 	section{
 		width: 100%;
 		left: 0;
+	}
+	#article2{
+	top: 20%;	
+	}
+	#icon{
+		width: 40%;
 	}
 }
