--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ h3{
 	font-family: 'Cairo', sans-serif;
 	float: right;
 	font-size: 15px;
+	padding-bottom: 15px;
 }
 @media screen and (max-width: 500px) {
 	section{
