--- a/style.css
+++ b/style.css
@@ -93,11 +93,9 @@ h2{
 h3{
 	z-index: 1;
 	font-family: 'Cairo', sans-serif;
-	float: right;
 	font-size: 15px;
 	position: absolute;
-	padding-bottom: 5px;
-	padding-right: 10px;
+	right:0;
 }
 @media screen and (max-width: 500px) {
 	section{
